[package]
name = "frens"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
# prost = "0.13"
prost-types = "0.13"
substreams-solana-program-instructions = "0.2"
anchor-lang = ">=0.31.0"
sologger_log_context = "0.1.2"
base64 = "0.22.1"
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-solana-utils = { workspace = true }
prost = { workspace = true }
bs58 = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
