[package]
name = "pumpfun-amm-substream"
version = "0.0.1"
edition = "2021"

[lib]
name = "pumpfun_amm_substream"
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-solana = { workspace = true }
substreams-solana-utils = { workspace = true }
prost = { workspace = true }
bs58 = { workspace = true }
borsh = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
spl-token-substream = { path = "../spl_token" }
system-program-substream = { path = "../system_program" }
